--- a/content/assignment1.html
+++ b/content/assignment1.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">Assignment << <a href='Assignment.html'>Previous</a> <a href='Random Grouping.html'>Next</a> >> Random Grouping<br /><h1>assignment1</h1>
+<br />Assignment << <a href='Assignment.html'>Previous</a> <a href='Random Grouping.html'>Next</a> >> Random Grouping</div>
         
     <!-- footer -->
       <div class="container">
