--- a/content/assignment2.html
+++ b/content/assignment2.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">Four Wheel Car << <a href='Four Wheel Car.html'>Previous</a> <a href='assignment3.html'>Next</a> >> assignment3<br /><h1>assignment2</h1>
+<br />Four Wheel Car << <a href='Four Wheel Car.html'>Previous</a> <a href='assignment3.html'>Next</a> >> assignment3</div>
         
     <!-- footer -->
       <div class="container">
