--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -104,9 +104,8 @@ EXIT</pre>
 <p><strong>week3</strong></p>
 <p>上週我被分派為小組長，我帶領的組員是40723213、40723216、40723241，我們被分派做的部分是<strong>研究並探討四輪車的模擬</strong>，因為我是小組長所以我分配成<strong><a href="https://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">BubbleRob tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/lineFollowingBubbleRobTutorial.htm">Line following BubbleRob tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/externalControllerTutorial.htm">External controller</a><a href="https://www.coppeliarobotics.com/helpFiles/en/externalControllerTutorial.htm"> tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/simulation.htm">Simulation</a> </strong>四個部分，每一個人分別研究一部份。</p>
 <p><em>Four Wheel Car-</em>Analysis and integration</p>
-<p><span style="color: #33cccc;">此部分由40723206提供</span></p>
-<p><span style="color: #ff0000;"><a href="https://www.coppeliarobotics.com/helpFiles/index.html">BubbleRob tutorial</a>:</span></p>
-<p>在此教程中會讓我們設計簡單的BubbleRob機器人並進行一些基礎的模擬操作，而大二上我們其實就有實際的以v-rep操作過這個教程，在這個教程中的說明包括了如何建造模型機器人主體、車輪及後方支撐滑塊，還有如何建造及設置障礙物，以及設定好的距離傳感器後使其去感測並避開我們所設置的障礙物，而最重要的要點是如何去設計指令讓傳動器依照我們所想要的方式去做動，且當距離感測器偵測到障礙物時才能使機器人迅速閃避障礙物，另外還有視覺辨識器，使機器人在移動時，讓我們能夠觀測到機器人行徑方向之路況。</p>
+<p><span style="color: #ff0000;"><a href="https://www.coppeliarobotics.com/helpFiles/index.html">BubbleRob tutorial</a>:                                                                   <span style="color: #33cccc;">此部分由40723206提供</span></span></p>
+<p style="text-align: justify;">在此教程中會讓我們設計簡單的BubbleRob機器人並進行一些基礎的模擬操作，而大二上我們其實就有實際的以v-rep操作過這個教程，在這個教程中的說明包括了如何建造模型機器人主體、車輪及後方支撐滑塊，還有如何建造及設置障礙物，以及設定好的距離傳感器後使其去感測並避開我們所設置的障礙物，而最重要的要點是如何去設計指令讓傳動器依照我們所想要的方式去做動，且當距離感測器偵測到障礙物時才能使機器人迅速閃避障礙物，另外還有視覺辨識器，使機器人在移動時，讓我們能夠觀測到機器人行徑方向之路況。</p>
 <p>week4</p>
 <p>week5</p>
 <h2>week6~9</h2>
