--- a/content/Four Wheel Car.html
+++ b/content/Four Wheel Car.html
@@ -154,8 +154,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">Potable System << <a href='Potable System.html'>Previous</a> <a href='assignment2.html'>Next</a> >> assignment2<br /><h1>Four Wheel Car</h1>
+<p><em>Four Wheel Car-</em>Analysis and integration</p>
+<p><span style="color: #ff0000;"><a href="https://www.coppeliarobotics.com/helpFiles/index.html">BubbleRob tutorial</a>:                                                                   <span style="color: #33cccc;">此部分由40723206提供</span></span></p>
+<p style="text-align: justify;">在此教程中會讓我們設計簡單的BubbleRob機器人並進行一些基礎的模擬操作，而大二上我們其實就有實際的以v-rep操作過這個教程，在這個教程中的說明包括了如何建造模型機器人主體、車輪及後方支撐滑塊，還有如何建造及設置障礙物，以及設定好的距離傳感器後使其去感測並避開我們所設置的障礙物，而最重要的要點是如何去設計指令讓傳動器依照我們所想要的方式去做動，且當距離感測器偵測到障礙物時才能使機器人迅速閃避障礙物，另外還有視覺辨識器，使機器人在移動時，讓我們能夠觀測到機器人行徑方向之路況。</p>
+<br />Potable System << <a href='Potable System.html'>Previous</a> <a href='assignment2.html'>Next</a> >> assignment2</div>
         
     <!-- footer -->
       <div class="container">
