--- a/content/Potable System.html
+++ b/content/Potable System.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">Random Grouping << <a href='Random Grouping.html'>Previous</a> <a href='Four Wheel Car.html'>Next</a> >> Four Wheel Car<br /><h1>Potable System</h1>
+<br />Random Grouping << <a href='Random Grouping.html'>Previous</a> <a href='Four Wheel Car.html'>Next</a> >> Four Wheel Car</div>
         
     <!-- footer -->
       <div class="container">
