--- a/content/Random Grouping.html
+++ b/content/Random Grouping.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">assignment1 << <a href='assignment1.html'>Previous</a> <a href='Potable System.html'>Next</a> >> Potable System<br /><h1>Random Grouping</h1>
+<br />assignment1 << <a href='assignment1.html'>Previous</a> <a href='Potable System.html'>Next</a> >> Potable System</div>
         
     <!-- footer -->
       <div class="container">
