--- a/content/assignment3.html
+++ b/content/assignment3.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">assignment2 << <a href='assignment2.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>assignment3</h1>
+<br />assignment2 << <a href='assignment2.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
         
     <!-- footer -->
       <div class="container">
