--- a/content/week1~5.html
+++ b/content/week1~5.html
@@ -123,14 +123,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>s40723206 cd2020</h1>
+                <h1>cd2020 40723206</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">s40723206 cd2020</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cd2020 40723206</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li><a href='assignment2.html'>assignment2</a><li><a href='assignment3.html'>assignment3</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
