--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -111,9 +111,8 @@ EXIT</pre>
 <p>week5</p>
 <h2>week6~9</h2>
 <p>week6</p>
-<p></p>
 <p><strong><em><a href="https://drive.google.com/file/d/13THamnfayiRT4Wa9KzmjXQSP4ZW2jIej/view?usp=sharing">MechanicalDesignProcess</a></em></strong></p>
-<p><strong>第</strong><strong>3</strong><strong>章</strong> <strong>結構注意事項</strong></p>
+<p style="text-align: center;"><strong>第</strong><strong>3</strong><strong>章</strong> <strong>結構注意事項</strong></p>
 <p>在前面的章節中，我們定義了成功的設計是什麼，然後繼續確定將要在設計中放置的對象的位置。現在，我們將討論設計的結構性考慮。我覺得我們必須建立在<span>“</span>堅實的基礎<span>”</span>上，以便設計的其餘部分可以以此為基礎。電子外殼（本身）的結構必須堅固到足以在客戶（用戶）使用產品的各種環境中工作。因此，讓我們從討論提供產品的主要考慮因素入手。這個<span>“</span>堅實的基礎<span>”</span>。本章將著重於：</p>
 <ul>
 <li><span></span>利用材料概念的優勢提出結構解決方案<span></span></li>
@@ -126,7 +125,6 @@ EXIT</pre>
 <p><span>2.</span>快速的<span>“</span>信封背面<span>”</span>設計。這種方法在簡化的結構元素上使用了一些基本的設計方程式。我們將在本章稍後探討這些設計方法的一些示例，以及一些示例問題。</p>
 <p><span>3.</span>更複雜的分析。在<span>Sect</span>中對此進行了更多探討。</p>
 <p><span>4.–</span>當然，過度設計 並不是所有設計的正確答案。在 競爭激烈的 產品市場中，客戶主要根據價格做出購買決定，過度設計可能會導致產品成本增加（或者肯定會增加重量和尺寸）。結構上的過度設計基本上是從一個非常有可能成功通過結構測試的設計開始的，也就是說，要在客戶使用環境中免受衝擊和振動的影響就可以通過。<span> </span></p>
-<p><span> </span></p>
 <p>過度設計原因有以下幾個：</p>
 <ul>
 <li><span></span>設計能夠承受所一些力的未知的高精度。這將在<span>Sect</span>中進一步探討。</li>
@@ -135,10 +133,9 @@ EXIT</pre>
 <p><strong>3.2</strong><strong>結構的設計過程</strong><strong> </strong></p>
 <p>我想給讀者一個通用的過程，以設計滿足設計要求的電子外殼（或外殼中的 單個零件 ）。通過完成這六個步驟，設計人員應該準備好提出可以使用的材料和橫截面。我將分別細分這六個步驟。 </p>
 <p><strong><em>    3.2.1</em></strong><strong><em>相似設計</em></strong><strong><em> </em></strong></p>
-<p>業內其他設計如何處理相似情況？其他設計可能來自您自己公司內部的示例（過去的產品），也可能來自您自己公司外部的競爭產品。<span> </span><br/> </p>
+<p>業內其他設計如何處理相似情況？其他設計可能來自您自己公司內部的示例（過去的產品），也可能來自您自己公司外部的競爭產品。<span> </span></p>
 <p><strong><em>    3.2.2</em></strong><strong><em>分力</em></strong></p>
 <p>確定物體上的力（靜態和動態）–振幅和方向這些力量。通常不考慮零件的自重電子外殼可承受靜態力，但可以考慮使用動態力。在本文中，我指的是“對象”，“零件”和“成員”，但它們都應被視為完全是同一個人。</p>
-<p><span> </span></p>
 <p><strong><em>    3.2.3</em></strong><strong><em>現有的最終條件</em></strong><strong><em> </em></strong></p>
 <p>確定對象的<span>“</span>最終條件<span>”</span>，即其移動自由度以及如何支撐構件。常見的最終條件是<span>“</span>固定<span>”</span>（不允許移動）或<span>“</span>自由<span>”</span>（允許旋轉）。最終條件會影響確定負載將產生的應力大小。<span> </span></p>
 <p><strong><em>    3.2.4</em></strong><strong><em>建議材料和橫截面</em></strong><strong><em> </em></strong></p>
@@ -155,8 +152,6 @@ EXIT</pre>
 <p>在設計中，變形通常與強度同等重要。負載構件可能具有足夠的強度以承受特定的載荷，但是它可能偏轉超出工程材料彈性的不可接受的量。撓度（以及材料的彈性模量<span>E</span>）也存在問題正在考慮中的內容將在本章中的一些示例中顯示。上述選擇的經濟性（更換物料或更換物料交叉部分）給<span>EPE</span>設計師帶來了一個有趣的問題。的許多組合材料和橫截面積可以使用，但必鬚根據實際情況進行選擇項目的總體目標。除了運作外，它還必須滿足項目的成本目標，可製造性，風險，重量，上市時間等。這些選擇將是進一步的在<span>”</span>第<span>4</span>章<span>-</span>可能有替代解決方案需要進行審查<span>”</span>開始進行調查，測試和製作原型。最大的資產之一設計師可以帶入設計中，以便快速找到要選擇的邏輯在可行的材料<span>/</span>橫截面選擇候選材料中做出解決眼前的問題。</p>
 <p><br/> <strong><em>    3.2.5</em></strong><strong><em>合併功能</em></strong></p>
 <p>可以將正在設計的零件與裝配中的另一個零件組合嗎在這部分附近嗎？基本上，兩個單獨的部分可以合併成一個部分？查看被合併部分的“另類思維”方面是實際上希望從一個（設想的）單個零件創建兩個單獨的零件。這可能從而降低了總體成本，降低了組合設計的解決方案。主要選擇之一將是確定如何在生產中製造該解決方案。例如，一些這裡涉及的選擇是：</p>
-<p> </p>
-<p> </p>
 <ul>
 <li>該項目的工具預算是多少？該項目可以“負擔”開支嗎？鑄造，注模，擠壓或其他製造所需的資金可能正在考慮的充氣技術？是否有現有工具可以利用？必須確定找到“投資回收期”解決方案。例如，了解：</li>
 </ul>
@@ -206,7 +201,6 @@ EXIT</pre>
 <li>選擇適當的近似函數，制定線性方程，並解決這些方程</li>
 <li>以數字和視覺格式獲得結果</li>
 </ul>
-<p><span> </span></p>
 <p><strong>3.4</strong><strong>結構問題：靜載荷</strong><strong> </strong></p>
 <ul>
 <li><span></span>問題是可以將其視為<span>“</span>個體<span>”</span>，即將載荷和力施加到 單個構件 要設計的上，也可以認為是<span>“</span>整體結構<span>”</span>，也就是說，它可以是對整個（組裝）結構的分析。<span></span></li>
@@ -229,7 +223,7 @@ EXIT</pre>
 <p><span>7.</span>負載條件。</p>
 <p><span>8.</span>最壞的情況下加載。</p>
 <p><span>9.</span>組合加載。<span> </span></p>
-<p><span> </span></p>
+<p><span></span></p>
 <p><strong><em>    3.4.1</em></strong><strong><em>懸臂梁分析</em></strong><strong><em> </em></strong></p>
 <p>本節重要性在於強調了橫向剪應力對最大應力的影響。在確定樑的最大應力時，除非用盡所有可能產生最大主應力的彎曲應力和剪切應力組合，否則不要對結果感到滿意。通常，剪切圖和彎矩圖的構造以及彎曲應力和橫向剪切應力的數量級比較將大大簡化問題。<span> </span></p>
 <p>使用梁應力公式，我們將繼續解決電子外殼設計人員可能面臨的問題的<span>“</span>主推力<span>”</span>。那就是確定<span>“</span>蓋板<span>”</span>到外殼底盤的（最大）緊固件距離。這種類型的問題涉及沿外殼提供的環境密封<span> </span></p>
@@ -286,8 +280,7 @@ EXIT</pre>
 <p>Shielding Products (1991)</p>
 <ol start="4">
 <li>Injection Molding magazine, May 1998 issue, R. Cramer of Dow Materials Engineering Center</li>
-</ol>
-<h2>week10~14</h2>
+</ol><h2>week10~14</h2>
 <h2>week15~18</h2>
 <h1>Assignment</h1>
 <h2>assignment1</h2>
