Layout update a few week ago and assignment 3 pdf

--- a/content/week1~5.html
+++ b/content/week1~5.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='group-cd2020bg1.html'>group-cd2020bg1</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li><a href='assignment2.html'>assignment2</a><li><a href='assignment3.html'>assignment3</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='group-cd2020bg1.html'>group-cd2020bg1</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li class='has-children'><a href='assignment2.html'>assignment2</a><ul class='dropdown'><li><a href='IndustrialAndEngineeringProductDesignCollaboration.html'>IndustrialAndEngineeringProductDesignCollaboration</a><li><a href='DesignCollaborationBetterProducts.html'>DesignCollaborationBetterProducts</a><li><a href='MechanicalDesignProcess thirth segment.html'>MechanicalDesignProcess thirth segment</a><li><a href='MechanicalDesignProcess first segment.html'>MechanicalDesignProcess first segment</a></li></ul><li><a href='assignment3.html'>assignment3</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -163,6 +163,20 @@ img.add_border {
 <p>4.輸入 python -m pip install flask cors 指令裝 pip 套件。</p>
 <p><span>5.練習開啟近端及遠端並更改網頁名稱。</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/y2TQRMlc2i0" width="560"></iframe></span></p>
+<p><strong><em>第一次線上會議</em></strong></p>
+<p>一.成員簽到</p>
+<p>40723201 (簽) 已建立完成網站<span> </span><br/>40723206 (簽) 已建立完成網站<span> </span><span style="color: #ff0000;">小組長</span><span> </span><br/>40723213 (簽) 已建立完成網站<span> </span><br/>40723216 (簽) 已建立完成網站<span> </span><br/>40723223 (簽)<span> </span><br/>40723226 (簽) 已建立完成網站<span> </span><br/>40723229 (簽) 已建立完成網站<span> </span><span style="color: #ff0000;">小組長</span><span> </span><br/>40723230 (簽) 已建立完成網站<span> </span><br/>40723241 (簽) 已建立完成網站<span> </span><br/>40723242 (簽) 已建立完成網站<span> </span><span style="color: #ff0000;">小組長</span><span> </span><br/>40723246 (<span style="color: #0000ff;">group leader</span>) (簽) 已建立完成網站<span> </span><br/>40732319 (簽)</p>
+<p>二.討論日後分工</p>
+<p>1.由(40723201、40723206、40723230、40723241、40723246)，已經建立<br/>好網站及編輯完網站的同學，前去協助還沒完成的同學<span> </span><br/><br/>2.40723213、40723242 督處尚未完成的同學，互相協助來完成第一周課程<span> </span><br/><br/>3.40723223、40723223 負責處理小組會議<span> </span><br/><br/>4.40723246 負責製作小組會議<span> </span><br/><br/>5.40723241、40723216 提醒小組問題及完成分組作業</p>
+<p>三.有問題的同學提出問題 </p>
+<p></p>
+<p><strong>組員會議中提醒的事項</strong><span> </span><br/><br/>1.網站的格式及編譯<span> </span><br/><br/>2.其餘的工作分配<span> </span><br/><br/>3.PDF 放倉儲的位置及如何放置</p>
+<p><strong>分工表</strong></p>
+<p><strong><b><img alt="" height="415" src="./../images/001.png" width="405"/></b></strong></p>
+<p><strong><b>直播meeting1影片:</b></strong></p>
+<p>網址:<a href="https://youtu.be/nKNgEypBalo">https://youtu.be/nKNgEypBalo</a></p>
+<p><strong><b><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nKNgEypBalo" width="560"></iframe></b></strong></p>
+<p><strong></strong></p>
 <p><strong>week2</strong></p>
 <p><em>將可攜系統python 3.7.3更新至python 3.8.2</em></p>
 <p><span>1.先去GOOGLE找<a href="https://www.python.org/downloads/windows/">Python</a></span></p>
@@ -234,18 +248,20 @@ EXIT</pre>
 </pre>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">pip install flask bs4 lxml pelican markdown flask_cors leo
 </pre>
-<p><em>第一次線上會議</em></p>
-<p>一.成員簽到</p>
-<p>40723201 (簽) 已建立完成網站 <br/>40723206 (簽) 已建立完成網站 <span style="color: #ff0000;">小組長</span> <br/>40723213 (簽) 已建立完成網站 <br/>40723216 (簽) 已建立完成網站 <br/>40723223 (簽) <br/>40723226 (簽) 已建立完成網站 <br/>40723229 (簽) 已建立完成網站 <span style="color: #ff0000;">小組長</span> <br/>40723230 (簽) 已建立完成網站 <br/>40723241 (簽) 已建立完成網站 <br/>40723242 (簽) 已建立完成網站 <span style="color: #ff0000;">小組長</span> <br/>40723246 (<span style="color: #0000ff;">group leader</span>) (簽) 已建立完成網站 <br/>40732319 (簽)</p>
-<p>二.討論日後分工</p>
-<p>1.由(40723201、40723206、40723230、40723241、40723246)，已經建立<br/>好網站及編輯完網站的同學，前去協助還沒完成的同學 <br/> <br/>2.40723213、40723242 督處尚未完成的同學，互相協助來完成第一周課程 <br/> <br/>3.40723223、40723223 負責處理小組會議 <br/> <br/>4.40723246 負責製作小組會議 <br/> <br/>5.40723241、40723216 提醒小組問題及完成分組作業</p>
-<p>三.有問題的同學提出問題 </p>
-<p></p>
-<p><strong>組員會議中提醒的事項</strong> <br/> <br/>1.網站的格式及編譯 <br/> <br/>2.其餘的工作分配 <br/> <br/>3.PDF 放倉儲的位置及如何放置<strong> </strong></p>
-<p><b>分工表</b></p>
-<p><b><img alt="" height="415" src="./../images/001.png" width="405"/></b></p>
-<p><strong></strong></p>
+<p><strong><em>第二次線上會議</em></strong></p>
+<p>1.成員簽到等候 <br/>2.分工作業進度回報及問題討論 <br/>3.有問題的同學提出問題 <br/> <br/>成員名單 <br/>1.40723201 (簽) 已建立完成網站 <br/>2.40723206 (簽) 已建立完成網站 小組長 <br/>3.40723213 (簽) 已建立完成網站 <br/>4.40723216 (簽) 已建立完成網站 <br/>5.40723223 (簽) 已建立完成網站 <br/>6.40723226 (簽) 已建立完成網站 <br/>7.40723229 (簽) 已建立完成網站 小組長 <br/>8.40723230 () 已建立完成網站 <br/>9.40723241 (簽) 已建立完成網站 <br/>10.40723242 (簽) 已建立完成網站 小組長 <br/>11.40723246 (group leader) (簽) 已建立完成網站 <br/>12.40732319 () <br/> <br/>分工作業進度回報及問題討論 <br/> <br/>※作業一(4 輪車) <br/>*根據主題 0 和主題 1 的素材，您能否具體描述機械設計團隊，為了完成作業四輪機 器人需要做些什麼?<em> <br/> </em></p>
+<p>※作業二(設計協同) <br/>* 根據主題 Topic 0 們可以創建英語英語詞彙收集服務嗎？ *根據主題 Topic 1 我們可以構建在線工具來促進這些過程嗎？</p>
+<p>*Topic 0: From Digital to Industrial + Engineering Product Design <br/>Collaboration ( 從數字到工業 + 工程產品設計協作 ) <br/>設計資料:<a href="https://drive.google.com/file/d/1YHQwYduSMisiJQS-Jr_HhJghzIqP_SBc/view">DigitalProductCollaboration.pdf</a>、<br/><a href="https://drive.google.com/file/d/1KRwEcU7Vn65xL6twStG_EWaTKz1Ag8PG/view">IndustrialAndEngineeringProductDesignCollaboration.pdf</a> Can we create an english-english vocabulary collection service? <br/><br/>*Topic 1: Mechanical Design Process ( 機械設計過程 ) <br/>Login to your gm email account and download <a href="https://drive.google.com/file/d/13THamnfayiRT4Wa9KzmjXQSP4ZW2jIej/view">MechanicalDesignProcess.pdf</a>. 以上由 40723206 分配工作</p>
+<p><span style="color: #ff0000;">下列為分工表格</span></p>
+<p><img alt="" height="273" src="./../images/ApplicationFrameHost_2020-05-28_02-38-52.png" width="454"/></p>
+<p>本週重要提醒及任務 <br/> <br/>1.各組員下載 OBS，以往後會議討論用</p>
+<p>2. 作業二必須在 4/23 前完成，並上傳 pdf 檔到個人倉儲的download上。會做的可以問會的同學或在 gitter 上發問。</p>
+<p>3. 請依每個人的作業二 pdf 檔、網站內容，進行互評。</p>
+<p><strong>直播meeting2影片:</strong></p>
+<p>網址:<a href="https://youtu.be/OxkKfuyFb0I">https://youtu.be/OxkKfuyFb0I</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OxkKfuyFb0I" width="560"></iframe></p>
 <p><strong>week3</strong></p>
+<p><strong></strong></p>
 <p>上週我被分派為小組長，我帶領的組員是40723213、40723216、40723241，我們被分派做的部分是<strong>研究並探討四輪車的模擬</strong>，因為我是小組長所以我分配成<strong><a href="https://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">BubbleRob tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/lineFollowingBubbleRobTutorial.htm">Line following BubbleRob tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/externalControllerTutorial.htm">External controller</a><a href="https://www.coppeliarobotics.com/helpFiles/en/externalControllerTutorial.htm"> tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/simulation.htm">Simulation</a> </strong>四個部分，每一個人分別研究一部份。</p>
 <p><em>Four Wheel Car-</em>Analysis and integration</p>
 <p><span style="color: #ff0000;"><a href="https://www.coppeliarobotics.com/helpFiles/index.html">BubbleRob tutorial</a>:                                                                   <span style="color: #33cccc;">此部分由40723206提供</span></span></p>
