--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,14 +1,13 @@
-<h1>About-1</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> <code>cmsimde</code></p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p><h1>weeks</h1>
+<h1>group-cd2020bg1</h1>
+<p><strong>cd2020-bg1分組網站:</strong><a href="https://s40723246.github.io/cd2020-bg1/content/index.html" rel="nofollow">https://s40723246.github.io/cd2020-bg1/content/index.html</a></p>
+<p><strong>member:</strong></p>
+<p></p>
+<p><span>吳沛汶Repository: </span><a cd2020="" com="" github="" href="https://s40723246.github.io/cd2020-bg1/content/htt%3Ch2%3Eweek6~week9%3C/h2%3E%3Ch2%3Eweek10~week14%3C/h2%3E%3Ch2%3Eweek15~week18%3C/h2%3E%3Ch1%3Emembers%3C/h1%3E%3Cp%3E%3Cspan%3ERepository:%C2%A0%3C/span%3E%3Ca%20href=" https:="" s40723201="">40723201</a><span><span> </span>| Site:<span> </span></span><span><a href="https://s40723201.github.io/cd2020">40723201</a></span><br/><span>王冠驊Repository:<span> </span></span><a href="https://github.com/s40723206/cd2020">40723206</a><span><span> </span>| Site:<span> </span></span><span><a href="https://s40723206.github.io/cd2020">40723206</a></span><span> (小組長)</span><br/><span>杜玗宸Repository:<span> </span></span><a href="https://github.com/s40723213/cd2020">40723213</a><span><span> </span>| Site:<span> </span></span><span><a href="https://s40723213.github.io/cd2020">40723213</a></span><br/><span>林子欽Repository:<span> </span></span><a href="https://github.com/s40723216/cd2020">40723216</a><span><span> </span>| Site:<span> </span></span><span><a href="https://s40723216.github.io/cd2020">40723216</a></span><br/><span>洪維成Repository:<span> </span></span><a href="https://github.com/s40723223/cd2020">40723223</a><span><span> </span>| Site:<span> </span></span><a href="https://s40723223.github.io/cd2020">40723223</a><br/><span>高立倫Repository:<span> </span></span><a href="https://github.com/s40723226/cd2020">40723226</a><span><span> </span>| Site:<span> </span></span><a href="https://s40723226.github.io/cd2020">40723226</a><br/><span>陳羽泓Repository:<span> </span></span><a href="https://github.com/s40723229/cd2020">40723229</a><span><span> </span>| Site:<span> </span></span><a href="https://s40723229.github.io/cd2020">40723229</a><span> </span><span>(小組長)</span><br/><span>陳冠樺Repository:<span> </span></span><a href="https://github.com/s40723230/cd2020">40723230</a><span><span> </span>| Site:<span> </span></span><a href="https://s40723230.github.io/cd2020">40723230</a><br/><span>葉承叡Repository:<span> </span></span><span><a href="https://github.com/s40723241/cd2020">40723241</a></span><span><span> </span>| Site:<span> </span></span><span><a href="https://s40723241.github.io/cd2020">40723241</a></span><br/><span>趙子得Repository:<span> </span></span><a href="https://github.com/s40723242/cd2020">40723242</a><span><span> </span>| Site:<span> </span></span><a href="https://s40723242.github.io/cd2020">40723242</a><span> (小組長)</span><br/><span>鄭竣元Repository:<span> </span></span><span><a href="https://github.com/s40723246/cd2020">40723246</a></span><span><span> </span>| Site:<span> </span></span><span><a href="https://s40723246.github.io/cd2020">40723246</a></span><span><span> </span>(group leader)</span><br/><span>Repository:<span> </span></span><a href="https://github.com/40732319/cd2020">40732319</a><span><span> </span>| Site:<span> </span></span><a href="https://40732319.github.io/cd2020">40732319</a></p>
+<p></p>
+<p></p>
+<p>之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
+<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
+<h1>weeks</h1>
 <h2>week1~5</h2>
 <p><strong>week1</strong></p>
 <p><em>創建github倉儲、設定新版可攜式套件</em></p>
@@ -18,6 +17,17 @@
 <p>4.輸入 python -m pip install flask cors 指令裝 pip 套件。</p>
 <p><span>5.練習開啟近端及遠端並更改網頁名稱。</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/y2TQRMlc2i0" width="560"></iframe></span></p>
+<p><em>第一次線上會議</em></p>
+<p>一.成員簽到</p>
+<p>40723201 (簽) 已建立完成網站<span> </span><br/>40723206 (簽) 已建立完成網站<span> </span><span style="color: #ff0000;">小組長</span><span> </span><br/>40723213 (簽) 已建立完成網站<span> </span><br/>40723216 (簽) 已建立完成網站<span> </span><br/>40723223 (簽)<span> </span><br/>40723226 (簽) 已建立完成網站<span> </span><br/>40723229 (簽) 已建立完成網站<span> </span><span style="color: #ff0000;">小組長</span><span> </span><br/>40723230 (簽) 已建立完成網站<span> </span><br/>40723241 (簽) 已建立完成網站<span> </span><br/>40723242 (簽) 已建立完成網站<span> </span><span style="color: #ff0000;">小組長</span><span> </span><br/>40723246 (<span style="color: #0000ff;">group leader</span>) (簽) 已建立完成網站<span> </span><br/>40732319 (簽)</p>
+<p>二.討論日後分工</p>
+<p>1.由(40723201、40723206、40723230、40723241、40723246)，已經建立<br/>好網站及編輯完網站的同學，前去協助還沒完成的同學<span> </span><br/><br/>2.40723213、40723242 督處尚未完成的同學，互相協助來完成第一周課程<span> </span><br/><br/>3.40723223、40723223 負責處理小組會議<span> </span><br/><br/>4.40723246 負責製作小組會議<span> </span><br/><br/>5.40723241、40723216 提醒小組問題及完成分組作業</p>
+<p>三.有問題的同學提出問題 </p>
+<p></p>
+<p><strong>組員會議中提醒的事項</strong><span> </span><br/><br/>1.網站的格式及編譯<span> </span><br/><br/>2.其餘的工作分配<span> </span><br/><br/>3.PDF 放倉儲的位置及如何放置</p>
+<p><strong>分工表</strong></p>
+<p><strong><b><img alt="" height="415" src="/images/001.png" width="405"/></b></strong></p>
+<p><strong></strong></p>
 <p><strong>week2</strong></p>
 <p><em>將可攜系統python 3.7.3更新至python 3.8.2</em></p>
 <p><span>1.先去GOOGLE找<a href="https://www.python.org/downloads/windows/">Python</a></span></p>
@@ -89,18 +99,14 @@ EXIT</pre>
 </pre>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">pip install flask bs4 lxml pelican markdown flask_cors leo
 </pre>
-<p><em>第一次線上會議</em></p>
-<p>一.成員簽到</p>
-<p>40723201 (簽) 已建立完成網站 <br/>40723206 (簽) 已建立完成網站 <span style="color: #ff0000;">小組長</span> <br/>40723213 (簽) 已建立完成網站 <br/>40723216 (簽) 已建立完成網站 <br/>40723223 (簽) <br/>40723226 (簽) 已建立完成網站 <br/>40723229 (簽) 已建立完成網站 <span style="color: #ff0000;">小組長</span> <br/>40723230 (簽) 已建立完成網站 <br/>40723241 (簽) 已建立完成網站 <br/>40723242 (簽) 已建立完成網站 <span style="color: #ff0000;">小組長</span> <br/>40723246 (<span style="color: #0000ff;">group leader</span>) (簽) 已建立完成網站 <br/>40732319 (簽)</p>
-<p>二.討論日後分工</p>
-<p>1.由(40723201、40723206、40723230、40723241、40723246)，已經建立<br/>好網站及編輯完網站的同學，前去協助還沒完成的同學 <br/> <br/>2.40723213、40723242 督處尚未完成的同學，互相協助來完成第一周課程 <br/> <br/>3.40723223、40723223 負責處理小組會議 <br/> <br/>4.40723246 負責製作小組會議 <br/> <br/>5.40723241、40723216 提醒小組問題及完成分組作業</p>
-<p>三.有問題的同學提出問題 </p>
+<p><em>第二次線上會議</em></p>
+<p>1.成員簽到等候 <br/>2.分工作業進度回報及問題討論 <br/>3.有問題的同學提出問題 <br/> <br/>成員名單 <br/>1.40723201 (簽) 已建立完成網站 <br/>2.40723206 (簽) 已建立完成網站 小組長 <br/>3.40723213 (簽) 已建立完成網站 <br/>4.40723216 (簽) 已建立完成網站 <br/>5.40723223 (簽) 已建立完成網站 <br/>6.40723226 (簽) 已建立完成網站 <br/>7.40723229 (簽) 已建立完成網站 小組長 <br/>8.40723230 () 已建立完成網站 <br/>9.40723241 (簽) 已建立完成網站 <br/>10.40723242 (簽) 已建立完成網站 小組長 <br/>11.40723246 (group leader) (簽) 已建立完成網站 <br/>12.40732319 () <br/> <br/>分工作業進度回報及問題討論 <br/> <br/>※作業一(4 輪車) <br/>*根據主題 0 和主題 1 的素材，您能否具體描述機械設計團隊，為了完成作業四輪機 器人需要做些什麼?<em> <br/> </em></p>
+<p>※作業二(設計協同) <br/>* 根據主題 Topic 0 們可以創建英語英語詞彙收集服務嗎？ *根據主題 Topic 1 我們可以構建在線工具來促進這些過程嗎？</p>
+<p>*Topic 0: From Digital to Industrial + Engineering Product Design <br/>Collaboration ( 從數字到工業 + 工程產品設計協作 ) <br/>設計資料:<a href="https://drive.google.com/file/d/1YHQwYduSMisiJQS-Jr_HhJghzIqP_SBc/view">DigitalProductCollaboration.pdf</a>、<br/><a href="https://drive.google.com/file/d/1KRwEcU7Vn65xL6twStG_EWaTKz1Ag8PG/view">IndustrialAndEngineeringProductDesignCollaboration.pdf</a> Can we create an english-english vocabulary collection service? <br/><br/>*Topic 1: Mechanical Design Process ( 機械設計過程 ) <br/>Login to your gm email account and download <a href="https://drive.google.com/file/d/13THamnfayiRT4Wa9KzmjXQSP4ZW2jIej/view">MechanicalDesignProcess.pdf</a>. 以上由 40723206 分配工作</p>
+<p><span style="color: #ff0000;">下列為分工表格</span></p>
 <p></p>
-<p><strong>組員會議中提醒的事項</strong> <br/> <br/>1.網站的格式及編譯 <br/> <br/>2.其餘的工作分配 <br/> <br/>3.PDF 放倉儲的位置及如何放置<strong> </strong></p>
-<p><b>分工表</b></p>
-<p><b><img alt="" height="415" src="/images/001.png" width="405"/></b></p>
-<p><strong></strong></p>
-<p><strong>week3</strong></p>
+<p></p>
+<p><strong>week3</strong><br/><strong></strong></p>
 <p>上週我被分派為小組長，我帶領的組員是40723213、40723216、40723241，我們被分派做的部分是<strong>研究並探討四輪車的模擬</strong>，因為我是小組長所以我分配成<strong><a href="https://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">BubbleRob tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/lineFollowingBubbleRobTutorial.htm">Line following BubbleRob tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/externalControllerTutorial.htm">External controller</a><a href="https://www.coppeliarobotics.com/helpFiles/en/externalControllerTutorial.htm"> tutorial</a>、<a href="https://www.coppeliarobotics.com/helpFiles/en/simulation.htm">Simulation</a> </strong>四個部分，每一個人分別研究一部份。</p>
 <p><em>Four Wheel Car-</em>Analysis and integration</p>
 <p><span style="color: #ff0000;"><a href="https://www.coppeliarobotics.com/helpFiles/index.html">BubbleRob tutorial</a>:                                                                   <span style="color: #33cccc;">此部分由40723206提供</span></span></p>
@@ -279,7 +285,34 @@ EXIT</pre>
 <p>Shielding Products (1991)</p>
 <ol start="4">
 <li>Injection Molding magazine, May 1998 issue, R. Cramer of Dow Materials Engineering Center</li>
-</ol><h2>week10~14</h2>
+</ol>
+<p><strong>week8</strong></p>
+<p><span><strong><span color="#000000">安裝以下三個模組</span></strong></span></p>
+<p>1.pip install opencv-python</p>
+<p>2.pip install imutils</p>
+<p>3.pip install numpy</p>
+<p><img alt="" height="280" src="/images/chrome_2020-05-23_23-24-49.png" width="596"/></p>
+<h2>week10~14</h2>
+<p><strong>對ssh連線</strong></p>
+<p>(1)到y槽的portablegit將sh_for_solvespace檔案複製並修改成sh.exe</p>
+<p>(2)進入黑窗輸入sh和ssh-keygen -t rsa -b 4096 -C "使用者學號"</p>
+<p>(3)下載putty並利用其中的putty.gen創建兩把金鑰</p>
+<p>(4)修改啟動器中的指令</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">set GIT_HOME=%Disk%:\portablegit\bin\
+set GIT_SSH=%Disk%:\putty\plink.exe</pre>
+<p>(5)進入config中更改指令url = git@github.com:mdecourse/cd2020.git在mdecourse的地方要改成自己的學號<br/>(6)開啟putty.exe進去設定github.com和proxy位置其中ssh中的auth的地方必須選取剛剛創建的金鑰</p>
+<p>(7)用編輯器複製課程網站中的step6指令並且儲存放入.ssh資料夾之中</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">ProxyCommand y:/putty/plink.exe github.com %h %p
+
+Host github.com
+    User git
+    Port 22
+    Hostname github.com
+
+    TCPKeepAlive yes
+    IdentitiesOnly yes</pre>
+<p>(8)進入github並且在setting中的ssh將金鑰開啟並複製放入金鑰設置處</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KLR2AYgxIcw" width="560"></iframe></p>
 <h2>week15~18</h2>
 <h1>Assignment</h1>
 <h2>assignment1</h2>
