--- a/content/MechanicalDesignProcess thirth segment.html
+++ b/content/MechanicalDesignProcess thirth segment.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week1~5 << <a href='week1~5.html'>Previous</a> <a href='week10~14.html'>Next</a> >> week10~14<br /><h1>week6~9</h1>
-<p>week6</p>
+    <div id="tipue_search_content">DesignCollaborationBetterProducts << <a href='DesignCollaborationBetterProducts.html'>Previous</a> <a href='MechanicalDesignProcess first segment.html'>Next</a> >> MechanicalDesignProcess first segment<br /><h1>MechanicalDesignProcess thirth segment</h1>
 <p><strong><em><a href="https://drive.google.com/file/d/13THamnfayiRT4Wa9KzmjXQSP4ZW2jIej/view?usp=sharing">MechanicalDesignProcess</a></em></strong></p>
-<p style="text-align: center;"><strong>第</strong><strong>3</strong><strong>章</strong> <strong>結構注意事項</strong></p>
+<p style="text-align: center;"><strong>第</strong><strong>3</strong><strong>章</strong><span> </span><strong>結構注意事項</strong></p>
 <p>在前面的章節中，我們定義了成功的設計是什麼，然後繼續確定將要在設計中放置的對象的位置。現在，我們將討論設計的結構性考慮。我覺得我們必須建立在<span>“</span>堅實的基礎<span>”</span>上，以便設計的其餘部分可以以此為基礎。電子外殼（本身）的結構必須堅固到足以在客戶（用戶）使用產品的各種環境中工作。因此，讓我們從討論提供產品的主要考慮因素入手。這個<span>“</span>堅實的基礎<span>”</span>。本章將著重於：</p>
 <ul>
 <li><span></span>利用材料概念的優勢提出結構解決方案<span></span></li>
@@ -190,12 +189,12 @@ img.add_border {
 <li><span></span>更換材料，從而可以更改應力極限。因此，選擇具有較高應力極限的材料可以在該構件上施加更多的載荷。<span></span></li>
 <li><span></span>更改材料的橫截面特性，基本上是構件的第二面積矩以及可以從構件的<span>“</span>中性軸<span>”</span>集中的面積。或質心。增大面積將實質上增加成員承載更多載荷的能力。遠離會員的<span>“</span>中性軸<span>”</span>增加該面積也將有助於會員承擔更多的負載（這就是<span>“</span>工字梁<span>”</span>的原因，<span>“</span>工字梁<span>”</span>的許多橫截面都遠離<span>“</span>中性軸<span>”</span>，是出色的承載構件）。<span></span></li>
 </ul>
-<p><strong>       </strong><span style="color: #ff0000;"><span style="color: #000000; background-color: #ffff99;"> 3.2.4.2鋁解決方案</span><strong> </strong></span></p>
+<p><strong>       </strong><span style="color: #ff0000;"><span style="color: #000000; background-color: #ffff99;"><span> </span>3.2.4.2鋁解決方案</span><strong> </strong></span></p>
 <p>設計就是要提出一些合理的選擇，所以讓我們看一下鋁樑。</p>
-<p>我們可以選擇，<span>b = 4</span>英寸，<span>h = 2.5</span>英寸。我們可以看到最大應力為<span>23,100 psi</span>。這高於鋁的最大屈服應力，因此不會造成結構變形。在我們的設計中令人非常滿意。但是要記住光束的高度是我們對慣性矩的計算<span>b = 2.5</span>英寸和<span>h = 4</span>英寸？這將是與鋁樑的先前示例。現在，最大壓力將是<span>14,400 psi</span>，完全在該鋁的最大<span>22,000 psi</span>之內。因此，“旋轉<span>-</span>相同的橫截面，其中較厚的方向是在載荷方向上力，使這種材料選擇和橫截面在結構上成功。讓我們看一下鋁樑的重量。<span> 169</span>磅<span>/</span>英尺<span>3</span>，光束會是<span>47</span>磅。相比之下，松木為<span>40</span>磅。</p>
+<p>我們可以選擇，<span>b = 4</span>英寸，<span>h = 2.5</span>英寸。我們可以看到最大應力為<span>23,100 psi</span>。這高於鋁的最大屈服應力，因此不會造成結構變形。在我們的設計中令人非常滿意。但是要記住光束的高度是我們對慣性矩的計算<span>b = 2.5</span>英寸和<span>h = 4</span>英寸？這將是與鋁樑的先前示例。現在，最大壓力將是<span>14,400 psi</span>，完全在該鋁的最大<span>22,000 psi</span>之內。因此，“旋轉<span>-</span>相同的橫截面，其中較厚的方向是在載荷方向上力，使這種材料選擇和橫截面在結構上成功。讓我們看一下鋁樑的重量。<span><span> </span>169</span>磅<span>/</span>英尺<span>3</span>，光束會是<span>47</span>磅。相比之下，松木為<span>40</span>磅。</p>
 <p>總之，我們研究了兩種不同的材料（松木和鋁最小）可用於解決結構問題。我們可以跨領域開發解決結構問題的每種材料的截面積。</p>
 <p>在設計中，變形通常與強度同等重要。負載構件可能具有足夠的強度以承受特定的載荷，但是它可能偏轉超出工程材料彈性的不可接受的量。撓度（以及材料的彈性模量<span>E</span>）也存在問題正在考慮中的內容將在本章中的一些示例中顯示。上述選擇的經濟性（更換物料或更換物料交叉部分）給<span>EPE</span>設計師帶來了一個有趣的問題。的許多組合材料和橫截面積可以使用，但必鬚根據實際情況進行選擇項目的總體目標。除了運作外，它還必須滿足項目的成本目標，可製造性，風險，重量，上市時間等。這些選擇將是進一步的在<span>”</span>第<span>4</span>章<span>-</span>可能有替代解決方案需要進行審查<span>”</span>開始進行調查，測試和製作原型。最大的資產之一設計師可以帶入設計中，以便快速找到要選擇的邏輯在可行的材料<span>/</span>橫截面選擇候選材料中做出解決眼前的問題。</p>
-<p><br/> <strong><em>    3.2.5</em></strong><strong><em>合併功能</em></strong></p>
+<p><br/><strong><em>    3.2.5</em></strong><strong><em>合併功能</em></strong></p>
 <p>可以將正在設計的零件與裝配中的另一個零件組合嗎在這部分附近嗎？基本上，兩個單獨的部分可以合併成一個部分？查看被合併部分的“另類思維”方面是實際上希望從一個（設想的）單個零件創建兩個單獨的零件。這可能從而降低了總體成本，降低了組合設計的解決方案。主要選擇之一將是確定如何在生產中製造該解決方案。例如，一些這裡涉及的選擇是：</p>
 <ul>
 <li>該項目的工具預算是多少？該項目可以“負擔”開支嗎？鑄造，注模，擠壓或其他製造所需的資金可能正在考慮的充氣技術？是否有現有工具可以利用？必須確定找到“投資回收期”解決方案。例如，了解：</li>
@@ -213,14 +212,14 @@ img.add_border {
 <li><span></span>確定所選設計（材料或幾何形狀）的<span>“</span>關鍵方面<span>”</span>，以及如何在生產中指定，認證和檢查它們？做筆記以確保將執行這些步驟（認證<span>/</span>檢查）。確定設計各個階段所需的測試，以確保最終設計足以將其交付給生產中的客戶。<span></span></li>
 <li><span></span>將有一個優化的解決方案，通常可以通過分析設計的主要組成部分並確定設計中<span>“</span>弱鏈接<span>”</span>的位置來找到。這可以通過利用某些測試方法來發現，這些方法會通過超出環境限制的測試（例如高度加速的壽命測試，<span>HALT</span>）而導致失敗。通過首先確定可能發生故障的位置，然後通過測試設計原型，可以生成數據來確定某些段是否接近其設計極限。<span></span></li>
 </ul>
-<p><span>    </span>如果設計過程中的上述六個步驟中的任何一個都沒有一定程度的已知答案，則設計人員將面臨：<span> </span></p>
+<p><span>   <span> </span></span>如果設計過程中的上述六個步驟中的任何一個都沒有一定程度的已知答案，則設計人員將面臨：<span> </span></p>
 <ul>
 <li><span></span>進行進一步查詢以獲取更好的信息。<span></span></li>
 <li><span></span>進行設計。設計人員在設計過程的一開始就幾乎不了解零件的所有作用力和相互關係。當然，設計人員可以列出所做的假設以及必不可少的其他信息。當然，可以設計零件，對零件進行原型設計並在需要使用的條件下進行測試。解決<span>“</span>在不知道所有信息的情況下進行設計<span>”</span>這一難題的幾種方法可以被採取讓我們研究一個示例，其中：<span></span></li>
 </ul>
 <p>設計<span>1</span>的重量為目標重量的<span>110</span>％，但在結構上成功的可能性為<span>95</span>％。設計<span>2</span>是目標重量的<span>100</span>％，但<span>75</span>％<span> </span>在結構上成功的機會。因此，設計<span>1</span>超出了目標重量的<span>10</span>％，但是無法達到通過設計工作的設計目標的風險要低得多結構的觀點。因此，“折衷”是優化設計所需的時間。當然，產品必須從結構的角度進行工作。很難確定在程序開始時就在設計中“預留空間”。繼續前進在不知道所有信息的情況下進行設計的價值在於“基本設計”可以測試。希望可以迅速修改“基本設計”框架，使程序可以在獲得其餘信息時繼續運行。我們可以通過“過度設計”零件來快速前進，或者投入更多時間來“勉強”滿足所有要求。仔細研究了這兩個路徑以下更多解答：</p>
-<p><span>A.</span>“過度設計”零件–這種方法可能保證零件會在測試中的結構功能。這裡的想法是迭代回到測試顯示出節省材料和減輕重量的地方，從而減少了保守的設計適當。這種方法至少使設計會議的機會最大化在項目測試階段的早期就對結構功能進行了要求等等。但是，設計的重量發生了變化，使這些零件更接近“<span> mar-</span>最終成功”將需要時間（和金錢）來重新測試設計以驗證更改。大多數項目在迭代方法上的時間有限獲得“完全”設計的零件。</p>
-<p><span>B.</span>設計零件時使用“僅少量”會議會花費更多時間兼顧重量和強度要求。因此，這種策略與過度設計（以上），因為零件的設計有可能（只是勉強）工作。例如，如果空間和重量減少量最大產品要求列表，該設計在“基本”上可以接受結構強度因子，但具有更大的材料和重量節省，可能是需要什麼。這種方法試圖平衡“風險和回報”與應該徵得設計團隊的同意才能前進。有了這個設計可以達到材料和重量的目標。但是，這種設計的風險不大從結構上講，工作率從<span>5</span>％上升到<span>25</span>％。因此“<span> B</span>”設計路徑顯示不滿足產品結構強度要求的較高風險，但將滿足產品的重量要求。</p>
+<p><span>A.</span>“過度設計”零件–這種方法可能保證零件會在測試中的結構功能。這裡的想法是迭代回到測試顯示出節省材料和減輕重量的地方，從而減少了保守的設計適當。這種方法至少使設計會議的機會最大化在項目測試階段的早期就對結構功能進行了要求等等。但是，設計的重量發生了變化，使這些零件更接近“<span><span> </span>mar-</span>最終成功”將需要時間（和金錢）來重新測試設計以驗證更改。大多數項目在迭代方法上的時間有限獲得“完全”設計的零件。</p>
+<p><span>B.</span>設計零件時使用“僅少量”會議會花費更多時間兼顧重量和強度要求。因此，這種策略與過度設計（以上），因為零件的設計有可能（只是勉強）工作。例如，如果空間和重量減少量最大產品要求列表，該設計在“基本”上可以接受結構強度因子，但具有更大的材料和重量節省，可能是需要什麼。這種方法試圖平衡“風險和回報”與應該徵得設計團隊的同意才能前進。有了這個設計可以達到材料和重量的目標。但是，這種設計的風險不大從結構上講，工作率從<span>5</span>％上升到<span>25</span>％。因此“<span><span> </span>B</span>”設計路徑顯示不滿足產品結構強度要求的較高風險，但將滿足產品的重量要求。</p>
 <p><span>C.</span>上述兩種方法的混合可能是合適的。也就是說，設計會比較保守，而設計的其他部分會更多有風險。這也許使“整體風險承受能力”成為整體風險的一部分。設計。經驗豐富的設計團隊將了解設計中的最佳位置“推翻接受度”。</p>
 <p><strong>3.3</strong><strong>所需的分析</strong><strong> </strong><sub></sub></p>
 <p>當然，有許多設計可以保證在電子包裝設計中進行最嚴格的分析。在任何競爭激烈的產品設計領域，將是使用給定技術進行最高生產力的公司，即將大程度地提高其成功機會。如果產品具有：</p>
@@ -231,7 +230,7 @@ img.add_border {
 </ul>
 <p>請注意，過分設計以致降低公司的盈利能力是沒有任何藉口的。設計師和工程師應該時刻警惕降低成本的可能性。零件的減少，可製造性的設計以及整體設計的優雅，導致了產品的領導地位。只有在設計的第一階段才能 最大 程度地降低成本。隨著設計甚至進入原型階段，為降低成本而重新設計的成本開始呈指數級增長。這方面的更多內容將在第一章中介紹。<span> </span></p>
 <p>另外，關於安全的注意事項也是適當的。在安全性很重要的任何領域，都不能為產品設計不足的藉口。當然，美國保險商實驗室（<span>UL</span>）和其他安全機構也會對電子設備進行安全考量認證。也就是說，安全機構將獲取產品（規格和工作單元），並對其進行審查和測試。大多數電子產品，當然是在全球範圍內銷售的產品，都必須通過嚴格的代理商批准認證。這方面的更多內容將在第一章中介紹。首要的設計考慮因素仍然是，並且將永遠是功能。即，零件必須 發揮作用 按預期。如果零件在負載下會失效，那麼它的外觀或生產的優雅程度都無關緊要。這是設計人員必須了解載荷的主要原因。<span> </span></p>
-<p><span>    </span>使用有限元分析（<span>FEA</span>）的現代分析軟件解決方案非常實用無處不在。在<span>Google</span>上進行的搜索顯示了一些入門資料，例如：</p>
+<p><span>   <span> </span></span>使用有限元分析（<span>FEA</span>）的現代分析軟件解決方案非常實用無處不在。在<span>Google</span>上進行的搜索顯示了一些入門資料，例如：</p>
 <p><span>A.</span>有限元分析，麻省理工學院的<span>David Roylance</span>。描述三個主體步驟為：</p>
 <ul>
 <li>預處理，將要分析的零件模型（其中的幾何形狀劃分為多個離散的子區域或“元素”）進行連接在離散點稱為“節點”</li>
@@ -277,7 +276,7 @@ img.add_border {
 <li><span></span>足夠的<span>EMI</span>屏蔽<span></span></li>
 </ul>
 <p>我們將在第<span>4</span>章中解決問題的屏蔽部分。現在，我們將解決設計基本密封設計幾何形狀方面的<span>“</span>結構性問題<span>”</span>，以保持足夠的強度以提供防潮密封。環境密封問題的結構考慮：<span> </span></p>
-<p><span>A.</span>密封材料：<span>“</span>產品環境（密封）<span>” </span></p>
+<p><span>A.</span>密封材料：<span>“</span>產品環境（密封）<span>”</span></p>
 <p><span>B.</span>蓋板和底盤材料：此處涵蓋的彈性模量</p>
 <p><span>C.</span>此處覆蓋的截面積（需要慣性矩）</p>
 <p><span>D.</span>此處覆蓋的螺栓間距</p>
@@ -293,15 +292,15 @@ img.add_border {
 <p>被過度壓縮。所有墊圈都要求這些<span>“</span>止動<span>”</span>以使緊固件具有指定的壓縮極限。我們還可以查看類似的設計，其中防護等級（空氣或水）與我們設計的水平相匹配。如果我們發現本身設計的尺寸適用於這些設計，則可以我們一些信心，我們當然有成功的機會，還應當指出的是 的因素之一， 整體 設計將有的 最低 緊固件量。因此，緊固件之間的<span>5.0</span>英寸的距離會比<span>4.0</span>更好英寸的距離（從而節省了緊固件並節省了擰緊這些緊固件的工作量）。但是，<span>4.0</span>英寸的間距將增加墊圈設計在不屬於一部分的附加載荷下密封的可能性。計算（例如衝擊或熱），從而為設計提供一定的安全裕度。<span> </span></p>
 <p><strong><em>    3.4.2</em></strong><strong><em>撓度公式和最大撓度</em></strong> </p>
 <p>    我們知道在<span>“</span>無肋<span>”</span>結構上增加肋骨將增加該結構處理更多載荷的能力。通常，可以通過在<span>“</span>常規<span>”</span>壁厚上增加厚度來增加強度，例如：<span> </span></p>
-<p><span>σ = Mc / I </span>，其中：<span> </span></p>
+<p><span>σ = Mc / I<span> </span></span>，其中：<span> </span></p>
 <p><span>σ=</span>所考慮構件的應力</p>
 <p><span>M =</span>該構件的最大力矩（通常是力乘以<span>“ </span>距離<span>“</span>，即是<span>”</span>的距離<span>“</span>從力到所述構件的部分）</p>
 <p><span>I / C = Z</span>，這是所考慮的部分的性質，也稱為從中性軸截面模量</p>
 <p><span>C =</span>距離成員到<span>“</span>外部纖維<span>”</span>的</p>
-<p><span>I =</span>成員的慣性矩（大約質心）成員因此，要增加的承載能力，您可以：增加<span>I</span>和<span>/</span>或減少<span>c</span>（增加<span>Z</span>）。在<span>I</span>為矩形（長方形是用於製造的構件的共同選擇）其中 <span>b =</span>的長度矩形的底邊，<span>h</span>是矩形的 厚度 。請注意，，增加厚度（<span>h</span>由於<span>“</span>平方函數<span>”</span>）具有很大的影響。因此，將厚度加倍實際上使光束強度提高四倍。上述說來，加倍厚度將增加構件的重量。對於重量敏感型設計而言，這可能是<span>“</span>災難<span>”</span>。但是，通過添加肋骨，肋骨是厚度的<span>“</span>間斷性<span>”</span>添加，強度顯著提高（而重量僅少量增加）。為什麼是這樣？</p>
+<p><span>I =</span>成員的慣性矩（大約質心）成員因此，要增加的承載能力，您可以：增加<span>I</span>和<span>/</span>或減少<span>c</span>（增加<span>Z</span>）。在<span>I</span>為矩形（長方形是用於製造的構件的共同選擇）其中<span> </span><span>b =</span>的長度矩形的底邊，<span>h</span>是矩形的 厚度 。請注意，，增加厚度（<span>h</span>由於<span>“</span>平方函數<span>”</span>）具有很大的影響。因此，將厚度加倍實際上使光束強度提高四倍。上述說來，加倍厚度將增加構件的重量。對於重量敏感型設計而言，這可能是<span>“</span>災難<span>”</span>。但是，通過添加肋骨，肋骨是厚度的<span>“</span>間斷性<span>”</span>添加，強度顯著提高（而重量僅少量增加）。為什麼是這樣？</p>
 <p>儘管肋骨會增加板的總慣性矩，但對於短肋骨，從中性軸到橫截面（<span>c</span>）的極端纖維的距離會更快地增加。對於間距較大的肋骨，此效果最為明顯。</p>
 <p><em><strong>    3.4.3</strong><strong>另一個撓曲問題，這次是卡扣鉤</strong></em></p>
-<p><span>    </span>這裡的想法是，鉤在連接操作過程中短暫偏轉，並卡入底切以完成配合操作。<span> </span></p>
+<p><span>   <span> </span></span>這裡的想法是，鉤在連接操作過程中短暫偏轉，並卡入底切以完成配合操作。<span> </span></p>
 <p>選擇了以下介紹性問題：<span> </span></p>
 <p><span>A.</span>顯示了一種通用的緊固方法（用於塑料）。</p>
 <p><span>B.</span>顯示了使用材料共同強度的公式，該公式利用了材料的彈性特性，在設計中將撓度用作優點，並優化了橫截面積和均勻應變。</p>
@@ -326,16 +325,7 @@ img.add_border {
 <ol start="4">
 <li>Injection Molding magazine, May 1998 issue, R. Cramer of Dow Materials Engineering Center</li>
 </ol>
-<p><strong>week8</strong></p>
-<p><span><strong><span color="#000000">安裝以下三個模組</span></strong></span></p>
-<p>1.pip install opencv-python</p>
-<p>2.pip install imutils</p>
-<p>3.pip install numpy</p>
-<p><img alt="" height="280" src="./../images/chrome_2020-05-23_23-24-49.png" width="596"/></p>
-<p><strong><em>第三次線上會議</em></strong></p>
-<p>1.成員簽到等候 <br/>2.分工作業進度回報及問題討論 <br/>3.有問題的同學提出問題 <br/> <br/>成員名單 <br/>1.40723201 (簽) 已建立完成網站 <br/>2.40723206 (簽) 已建立完成網站 小組長 <br/>3.40723213 (簽) 已建立完成網站 <br/>4.40723216 (簽) 已建立完成網站 <br/>5. 40723223(簽) 已建立完成網站 <br/>6.40723226 () 已建立完成網站 <br/>7.40723229 (簽) 已建立完成網站 小組長 <br/>8.40723230 (簽) 已建立完成網站 <br/>9.40723241 (簽) 已建立完成網站 <br/>10.40723242 () 已建立完成網站 小組長 <br/>11.40723246 (group leader) (簽) 已建立完成網站 <br/>12.40732319 () <br/> <br/>※作業一(4 輪車) <br/>*根據主題 0 和主題 1 的素材，您能否具體描述機械設計團隊，為了完成作業四輪機 器人需要做些什麼? <br/> <br/><span style="color: #ff0000;">四輪車馬達設定及鍵盤控制加速及轉彎</span></p>
-<p><strong></strong></p>
-<br />week1~5 << <a href='week1~5.html'>Previous</a> <a href='week10~14.html'>Next</a> >> week10~14</div>
+<br />DesignCollaborationBetterProducts << <a href='DesignCollaborationBetterProducts.html'>Previous</a> <a href='MechanicalDesignProcess first segment.html'>Next</a> >> MechanicalDesignProcess first segment</div>
         
     <!-- footer -->
       <div class="container">
