assignment3 layer edit

--- a/content/week6~9.html
+++ b/content/week6~9.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='group-cd2020bg1.html'>group-cd2020bg1</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li class='has-children'><a href='assignment2.html'>assignment2</a><ul class='dropdown'><li><a href='IndustrialAndEngineeringProductDesignCollaboration.html'>IndustrialAndEngineeringProductDesignCollaboration</a><li><a href='DesignCollaborationBetterProducts.html'>DesignCollaborationBetterProducts</a><li><a href='MechanicalDesignProcess thirth segment.html'>MechanicalDesignProcess thirth segment</a><li><a href='MechanicalDesignProcess first segment.html'>MechanicalDesignProcess first segment</a></li></ul><li><a href='assignment3.html'>assignment3</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='group-cd2020bg1.html'>group-cd2020bg1</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li class='has-children'><a href='assignment2.html'>assignment2</a><ul class='dropdown'><li><a href='IndustrialAndEngineeringProductDesignCollaboration.html'>IndustrialAndEngineeringProductDesignCollaboration</a><li><a href='DesignCollaborationBetterProducts.html'>DesignCollaborationBetterProducts</a><li><a href='MechanicalDesignProcess thirth segment.html'>MechanicalDesignProcess thirth segment</a><li><a href='MechanicalDesignProcess first segment.html'>MechanicalDesignProcess first segment</a></li></ul><li class='has-children'><a href='assignment3.html'>assignment3</a><ul class='dropdown'><li><a href='MSModelingAndTFApproach.html'>MSModelingAndTFApproach</a><li><a href='MechaFutureAndChallenges.html'>MechaFutureAndChallenges</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -326,6 +326,9 @@ img.add_border {
 <ol start="4">
 <li>Injection Molding magazine, May 1998 issue, R. Cramer of Dow Materials Engineering Center</li>
 </ol>
+<p><strong><span></span></strong></p>
+<p><em><strong>四輪車馬達驅動設定影片:</strong></em></p>
+<p><em><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mu8TeOt6J4E" width="560"></iframe></strong></em></p>
 <p><strong>week8</strong></p>
 <p><span><strong><span color="#000000">安裝以下三個模組</span></strong></span></p>
 <p>1.pip install opencv-python</p>
@@ -334,7 +337,7 @@ img.add_border {
 <p><img alt="" height="280" src="./../images/chrome_2020-05-23_23-24-49.png" width="596"/></p>
 <p><strong><em>第三次線上會議</em></strong></p>
 <p>1.成員簽到等候 <br/>2.分工作業進度回報及問題討論 <br/>3.有問題的同學提出問題 <br/> <br/>成員名單 <br/>1.40723201 (簽) 已建立完成網站 <br/>2.40723206 (簽) 已建立完成網站 小組長 <br/>3.40723213 (簽) 已建立完成網站 <br/>4.40723216 (簽) 已建立完成網站 <br/>5. 40723223(簽) 已建立完成網站 <br/>6.40723226 () 已建立完成網站 <br/>7.40723229 (簽) 已建立完成網站 小組長 <br/>8.40723230 (簽) 已建立完成網站 <br/>9.40723241 (簽) 已建立完成網站 <br/>10.40723242 () 已建立完成網站 小組長 <br/>11.40723246 (group leader) (簽) 已建立完成網站 <br/>12.40732319 () <br/> <br/>※作業一(4 輪車) <br/>*根據主題 0 和主題 1 的素材，您能否具體描述機械設計團隊，為了完成作業四輪機 器人需要做些什麼? <br/> <br/><span style="color: #ff0000;">四輪車馬達設定及鍵盤控制加速及轉彎</span></p>
-<p><strong></strong></p>
+<p></p>
 <br />week1~5 << <a href='week1~5.html'>Previous</a> <a href='week10~14.html'>Next</a> >> week10~14</div>
         
     <!-- footer -->
